--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "@types/lodash": "^4.14.41",
+    "@types/request": "0.0.36",
+    "angularfire2": "^2.0.0-beta.6",
     "core-js": "^2.4.1",
+    "firebase": "^3.6.1",
+    "firebase-queue": "^1.6.0",
+    "lodash": "^4.17.2",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
