--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # dependencies
 /node_modules
 /bower_components
-/environments/firebase.config.ts
+/src/environments/firebase.config.ts
 
 # IDEs and editors
 /.idea
